--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    debugCompile 'com.github.moduth:blockcanary-ui:1.1.4'
+    releaseCompile 'com.github.moduth:blockcanary-no-op:1.1.4'
 }
